syntax = "proto3";

package raftservice;

option go_package = ".;main";

service RaftService {
  rpc AppendEntries(AppendEntriesRequest) returns (AppendEntriesResponse) {}
}

message Log {
  int32 optype = 1;
  string key = 2;
  string value = 3;
}

message AppendEntriesRequest {
  int64 term = 1;
  int64 leaderId = 2;
  int64 prevLogIndex = 3;

  int64 prevLogTerm = 4;
  repeated Log logs = 5;
  int64 leaderCommit = 6;
}

message AppendEntriesResponse {
  int64 term = 1;
  bool  success = 2;
}
